# arsdk-rs

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
anafi-rs/: Cargo.toml
anafi-rs/examples/: liftoff.rs
anafi-rs/src/: lib.rs
arsdk-rs/: Cargo.toml
arsdk-rs/src/: ardrone3.rs  command.rs  common.rs  frame.rs  handshake.rs  jumping_sumo.rs  lib.rs  listener.rs  parse.rs
arsdk-rs/src/ardrone3/: gps_state.rs  piloting.rs  piloting_state.rs
arsdk-rs/src/ardrone3/piloting/: pcmd.rs
arsdk-serde/: Cargo.toml
arsdk-serde/src/: de.rs  error.rs  lib.rs  ser.rs
bebop2/: Cargo.toml
bebop2/examples/: take_off.rs
bebop2/src/: lib.rs
jumpingsumo-rs/: Cargo.toml
jumpingsumo-rs/examples/: jump.rs  new_sumo.rs  spin.rs
jumpingsumo-rs/src/: lib.rs
src/: command.rs  frame.rs  jumping_sumo.rs  lib.rs
