[package]
name = "arsdk-rs"
version = "0.0.4"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "parrot arsdk in rust"
license = "MIT/Apache-2.0"
keywords = ["drone", "parrot"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
pnet = "0.25"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dashmap = "3.11"
chrono = "0.4"
scroll = "0.10"
scroll_derive = "0.10"
