[package]
name = "bebop2"
version = "0.1.0"
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"

[dependencies]
arsdk-rs = { path = "../arsdk-rs" }

[dev-dependencies]
# Used for examples
env_logger = "0.7"
log = "0.4"
async-log = "^2.0"
tokio = {version = "0.2.22", features = ["rt-threaded", "macros", "time"]}
